--- a/C_SHARP_.csproj
+++ b/C_SHARP_.csproj
@@ -35,6 +35,9 @@
   <PropertyGroup>
     <ApplicationIcon>hnet.com-image.ico</ApplicationIcon>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>C_SHARP_.Kordused_Massiivid</StartupObject>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -46,6 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Kordused_Massiivid.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
